--- a/package.json
+++ b/package.json
@@ -4,16 +4,22 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
+    "start": "nodemon index",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cors": "^2.8.5",
+    "errorhandler": "^1.5.1",
     "express": "^4.17.1",
+    "http-errors": "^1.8.0",
+    "lodash": "^4.17.20",
+    "morgan": "^1.10.0",
+    "nodemailer": "^6.4.14",
     "nodemon": "^2.0.6",
+    "passport": "^0.4.1",
+    "sequelize": "^6.3.5",
     "socket.io": "^2.3.0",
     "sqlite3": "^5.0.0",
     "yup": "^0.29.3"
